# lambdasound

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  lambdasound.cabal
app/: Main.hs
bench/: Main.hs
example/: Example1.hs  Example2.hs  Example3.hs  Main.hs
profile/: Main.hs  run.sh
src/: LambdaSound.hs
src/Data/: SomeStableName.hs
src/LambdaSound/: Cache.hs  Convolution.hs  Create.hs  Effect.hs  Example.hs  Filter.hs  Note.hs  Play.hs  Plot.hs  Plugin.hs  Sample.hs  SampleDesign.hs  Samples.hs  Sampling.hs  SaveAndLoad.hs  Sound.hs  Sound2.hs
src/LambdaSound/SaveAndLoad/: RawSamples.hs
src/LambdaSound/Sound/: ComputeSound.hs  MSC.hs  Types.hs
test/: Main.hs
