cabal-version:      3.0
name:               lambdasound
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Simre1
maintainer:         simre4775@gmail.com
-- copyright:
category:           Sound
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        LambdaSound,
        LambdaSound.Sound,
        LambdaSound.Sound2,
        LambdaSound.Samples,
        LambdaSound.Effect,
        LambdaSound.Play,
        LambdaSound.Note,
        LambdaSound.Cache,
        LambdaSound.Sampling
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.17.0.0,
        containers,
        typed-process,
        bytestring,
        vector,
        directory,
        filepath,
        binary,
        random,
        zlib,
        wave,
        proteaaudio-sdl,
        massiv,
        bytestring-to-vector,
        deepseq,
        transformers,
        unordered-containers,
        hashable,
        hashtables
    hs-source-dirs:   src
    default-extensions:
        DuplicateRecordFields,
        OverloadedRecordDot,
        NoFieldSelectors,
        DataKinds,
        TypeFamilies
    default-language: GHC2021
    ghc-options: -O2

executable example
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        lambdasound
    default-extensions:
        DataKinds
    hs-source-dirs:   example
    default-language: GHC2021

executable lambdasound-profile
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        lambdasound
    default-extensions:
        DataKinds
    hs-source-dirs:   profile
    default-language: GHC2021
    ghc-options: -O2

test-suite lambdasound-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    default-extensions:
        DataKinds
    build-depends:
        base ^>=4.17.0.0,
        lambdasound,
        tasty,
        tasty-hunit,
        falsify,
        massiv

test-suite lambdasound-bench
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   bench
    main-is:          Main.hs
    default-extensions:
        DataKinds
    build-depends:
        base ^>=4.17.0.0,
        lambdasound,
        tasty,
        tasty-bench,
        vector
    ghc-options: -O2
